Added integration test for UserService.