@@ -26,6 +26,7 @@
     <module>zk</module>
     <module>zk-event-queue-provider</module>
 
+    <module>itest</module>
     <module>dist</module>  <!-- Must go last, because Maven is unaware of dependencies within feature.xml -->
   </modules>
 
@@ -40,6 +41,7 @@
     <osgi.version>7.0.0</osgi.version>
     <pax-web.version>7.2.14</pax-web.version>  <!-- this should match whatever is bundled with ${karaf.version} -->
     <servlet-api.version>3.1.0</servlet-api.version>  <!-- This version of the Servlet API is specified by OSGi R7 Compendium section 140.1 "HTTP Whiteboard Specification" 1.1 -->
+    <surefire.argLine/>
     <zk.version>9.0.0</zk.version>  <!-- usually the same as zk.version.osgi unless there's qualifier, e.g. 9.0.0-SNAPSHOT -->
     <zk.version.osgi>9.0.0</zk.version.osgi>  <!-- usually the same as zk.version unless there's a qualifier, e.g. 9.0.0.SNAPSHOT -->
     <zk.version.range>[9.0,10)</zk.version.range>
@@ -95,6 +97,10 @@
             </archive>
             <instructions>
               <Bundle-Category>cornerstone</Bundle-Category>  <!-- https://www.osgi.org/developer/specifications/reference/#Referencecategories -->
+              <Import-Package>
+                !org.checkerframework.checker.*,
+                *
+              </Import-Package>
             </instructions>
             <niceManifest>true</niceManifest>
             <supportedProjectTypes>
@@ -171,6 +177,16 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
           <version>3.1.0</version>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.22.2</version>
+          <configuration>
+            <forkMode>once</forkMode>
+            <argLine>${surefire.argLine}</argLine>
+          </configuration>
         </plugin>
 
         <plugin>
@@ -675,6 +691,23 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+
+    <profile>
+      <id>java9-plus</id>
+      <properties>
+        <surefire.argLine>
+          --add-opens java.base/java.security=ALL-UNNAMED
+          --add-opens java.base/java.net=ALL-UNNAMED
+          --add-opens java.base/java.lang=ALL-UNNAMED
+          --add-opens java.base/java.util=ALL-UNNAMED
+          --add-opens java.naming/javax.naming.spi=ALL-UNNAMED
+          --add-opens java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED
+        </surefire.argLine>
+      </properties>
+      <activation>
+        <jdk>[9,)</jdk>
+      </activation>
     </profile>
   </profiles>
 </project>
